--- a/app/views/admin/republishing/_form.html.erb
+++ b/app/views/admin/republishing/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(url: republishing_url, method: :post, data: {
+<%= form_with(url: republishing_path, method: :post, data: {
     module: "prevent-multiple-form-submissions",
   }) do %>
     <%= render("govuk_publishing_components/components/textarea", {
