Pass `republishing_event` as local to form partial
This follows what we do for `republishing_path` and avoids assumptions
about instance variables down at the partial level

--- a/app/views/admin/bulk_republishing/confirm_all.html.erb
+++ b/app/views/admin/bulk_republishing/confirm_all.html.erb
@@ -8,6 +8,9 @@
     <p class="govuk-body govuk-!-margin-bottom-7">
       This will schedule <%= @bulk_content_type_metadata[:name] %> to be republished.
     </p>
-    <%= render partial: "shared/republishing_form", locals: { republishing_path: @bulk_content_type_metadata[:republishing_path] } %>
+    <%= render partial: "shared/republishing_form", locals: {
+      republishing_event: @republishing_event,
+      republishing_path: @bulk_content_type_metadata[:republishing_path],
+    } %>
   </section>
 </div>
