--- a/app/views/shared/_republishing_form.html.erb
+++ b/app/views/shared/_republishing_form.html.erb
@@ -8,7 +8,7 @@
       },
       name: "reason",
       id: "republishing_event_reason",
-      error_items: errors_for(@republishing_event.errors, :reason),
+      error_items: errors_for(republishing_event.errors, :reason),
     }) %>
 
     <%= render("govuk_publishing_components/components/button", {
