--- a/lib/engines/content_object_store/app/components/content_object_store/content_block/document/show/linked_editions_table_component.html.erb
+++ b/lib/engines/content_object_store/app/components/content_object_store/content_block/document/show/linked_editions_table_component.html.erb
@@ -1,3 +1,7 @@
+
+<!-- TODO: The prototype wants to show a counter beneath the title but
+before the table, the existing component doesn't support that so I've left
+it out for now-->
 <%= render "govuk_publishing_components/components/table", {
   caption:,
   caption_classes: "govuk-heading-l",
@@ -14,3 +18,17 @@
   ],
   rows:,
 } %>
+
+<% if @page_data.total_pages > 1 %>
+  <% Admin::PaginationHelper.pagination_hash(
+    current_page: @page_data.current_page.to_i,
+    total_pages: @page_data.total_pages.to_i,
+    path: @page_path,
+  ).tap do |hash| %>
+    <%= render "components/pagination", {
+      previous_href: hash[:previous_href],
+      next_href: hash[:next_href],
+      items: hash[:items],
+    } %>
+  <% end %>
+<% end %>
