refactor form to handle editions that have not been saved
When the 'review_links' Controller method we will
shortly introduce needs to show invalid errors for
an Edition, it will pass the data for a new
Edition that has not been saved and is not able to
return `lead_organisation`

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/_form.html.erb
@@ -39,7 +39,7 @@
       {
         text: name,
         value: id,
-        selected: id == @form.content_block_edition.lead_organisation&.id,
+        selected: id == @form.content_block_edition.edition_organisation&.organisation_id,
       }
     end,
     error_message: errors_for_input(@form.content_block_edition.errors, "lead_organisation".to_sym),
