--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/review_links.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/review_links.html.erb
@@ -3,7 +3,7 @@
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: content_object_store.edit_content_object_store_content_block_edition_path(@content_block_edition),
+    href: content_object_store.edit_content_object_store_content_block_edition_path(@content_block_edition, step: ContentObjectStore::ContentBlock::EditionsController::EDIT_FORM_STEPS[:edit_block]),
   } %>
 <% end %>
 
@@ -16,7 +16,7 @@
             caption: "Content it appears in",
             linked_content_items: @linked_content_items,
             page_data: @page_data,
-            page_path: content_object_store.review_links_content_object_store_content_block_edition_path(content_block_edition: @edition_params),
+            page_path: content_object_store.edit_content_object_store_content_block_edition_path(content_block_edition: @edition_params, step: ContentObjectStore::ContentBlock::EditionsController::EDIT_FORM_STEPS[:review_links]),
             ),
           ) %>
   </div>
