Add an interface for GDS editors and admins to override the government associated with an edition
Decided to break this out into a view component so that it was possible to push some of the tests a little further down the pyramid.

Overriding the government will change the government displayed on the history mode banner on historic documents.

Annoyingly, because the conditional checkbox behaviour relies on Javascript, the best we can do to test that is working is assert that the government selection element is wrapped in a conditional div belonging to the political checkbox

--- a/app/views/admin/editions/_standard_fields.html.erb
+++ b/app/views/admin/editions/_standard_fields.html.erb
@@ -123,29 +123,7 @@
 
   <%= render "additional_significant_fields", form: form, edition: form.object %>
 
-  <% if edition.document&.live? && edition.can_be_marked_political? && can?(:mark_political, edition) %>
-    <div class="govuk-!-margin-bottom-8">
-      <%= form.hidden_field :political, value: "0" %>
-
-      <%= render "govuk_publishing_components/components/checkboxes", {
-        name: "edition[political]",
-        id: "edition_political",
-        heading: "Political",
-        heading_size: "l",
-        no_hint_text: true,
-        error: errors_for_input(edition.errors, :political),
-        items: [
-          {
-            label: "Associate with government of the time (currently set to #{edition.government&.name}).",
-            value: "1",
-            checked: edition.political,
-          },
-        ],
-      } %>
-
-      <p class="govuk-body"><%= link_to "Read the history mode guidance", "https://www.gov.uk/guidance/how-to-publish-on-gov-uk/creating-and-updating-pages#history-mode", class: "govuk-link" %> for more information as to what this means.</p>
-    </div>
-  <% end %>
+  <%= render Admin::Editions::HistoryModeFormControls.new(@edition, current_user) %>
 </div>
 
 <%= render Admin::Editions::FirstPublishedAtComponent.new(
