Add a `product_name` helper method
This will allow us to override it in the Content Object Store.

--- a/app/views/layouts/design_system.html.erb
+++ b/app/views/layouts/design_system.html.erb
@@ -11,7 +11,7 @@
 <% sanitized_title = sanitize((yield(:page_title).presence || yield(:title))) %>
 
 <%= render "govuk_publishing_components/components/layout_for_admin",
-           product_name: "Whitehall Publisher",
+           product_name:,
            environment: environment,
            browser_title: ("Error: " if yield(:error_summary).present?).to_s + sanitized_title do %>
 
