--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,7 +3,7 @@
 <% user = current_user %>
 
 <%= render "govuk_publishing_components/components/layout_header", {
-  product_name: "Whitehall Publisher",
+  product_name:,
   environment: environment,
   navigation_items: [
     main_nav_item("Dashboard", admin_root_path),
