DRY up the `context` blocks
We’re referring to `Object store` everywhere else, so let’s correct this
to use the correct name everywhere. It may be that we no longer need
this going forward if the layout is changing, but let’s keep it in for
now.

--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/index.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/index.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, "Object store" %>
+<% content_for :context, product_name %>
 <% content_for :title, "All content blocks" %>
 
 <div class="govuk-grid-row govuk-!-margin-bottom-8">
