--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/edit.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/edit.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, "Object store" %>
+<% content_for :context, product_name %>
 <% content_for :title, "Change #{@form.schema.name}" %>
 
 <% content_for :back_link do %>
