--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/show.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/documents/show.html.erb
@@ -1,4 +1,4 @@
-<% content_for :context, "Object store" %>
+<% content_for :context, product_name %>
 <% content_for :title, "Manage #{add_indefinite_article @content_block_document.block_type.humanize}" %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
