Add guidance text to connect document page
The validation added in previous commits works fine for saving and editing. Nonetheless,
users also have the option to associate a pre-existing publication to an announcement, with the
"Connect document" feature. This was also reported in Zendesk as a source of confusion, since the
filter is opinionated about the publication and announcements types matching, but nothing on the page
communicates that to the user.
We've added a text inset to indicate that this is the case.

--- a/app/views/admin/statistics_announcement_publications/index.html.erb
+++ b/app/views/admin/statistics_announcement_publications/index.html.erb
@@ -6,6 +6,11 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
+    <%= render "govuk_publishing_components/components/inset_text", {
+      text: "The type of the document you are trying to connect must match the type of the statistics announcement. Only #{@statistics_announcement.publication_type.plural_name} documents will be shown.",
+      margin_bottom: 8,
+    } %>
+
     <%= form_with url: admin_statistics_announcement_publication_index_path(@statistics_announcement), method: :get do |_form| %>
       <%= render "govuk_publishing_components/components/search", {
         name: "title",
