--- a/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/steps/schedule_publishing.html.erb
+++ b/lib/engines/content_object_store/app/views/content_object_store/content_block/editions/steps/schedule_publishing.html.erb
@@ -1,22 +1,21 @@
-<% content_for :context, "Manage #{add_indefinite_article @content_block_document.block_type.humanize}" %>
+<% content_for :context, "Manage #{add_indefinite_article @content_block_edition.document.block_type.humanize}" %>
 <% content_for :title, "When do you want to publish the change?" %>
 <% content_for :title_margin_bottom, 4 %>
 <% content_for :back_link do %>
   <%= render "govuk_publishing_components/components/back_link", {
-    href: content_object_store.edit_content_object_store_content_block_edition_path(
-      id: @content_block_document.latest_edition.id,
-      content_block_edition: @edition_params,
-      step: ContentObjectStore::ContentBlock::EditionsController::EDIT_FORM_STEPS[:review_links],
+    href: content_object_store.content_object_store_content_block_step_path(
+      edition_id: @content_block_edition.id,
+      step: ContentObjectStore::ContentBlock::Editions::StepsController::VALID_STEPS[:review_links],
     ),
   } %>
 <% end %>
 
 <%
-  year_param = @edition_params["scheduled_publication(1i)"]
-  month_param = @edition_params["scheduled_publication(2i)"]
-  day_param = @edition_params["scheduled_publication(3i)"]
-  hour_param = @edition_params["scheduled_publication(4i)"]
-  minute_param =  @edition_params["scheduled_publication(5i)"]
+  year_param = params.dig("scheduled_at", "scheduled_publication(1i)")
+  month_param = params.dig("scheduled_at", "scheduled_publication(2i)")
+  day_param = params.dig("scheduled_at", "scheduled_publication(3i)")
+  hour_param = params.dig("scheduled_at", "scheduled_publication(4i)")
+  minute_param =  params.dig("scheduled_at", "scheduled_publication(5i)")
   is_scheduled_param = params["schedule_publishing"]
 %>
 
@@ -26,13 +25,17 @@
 
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <%= form_with url:
-    content_object_store.content_object_store_content_block_edition_path("content_block/edition": @edition_params), method: :patch do %>
+    <%= form_with url: content_object_store.content_object_store_content_block_step_path(
+      edition_id: @content_block_edition.id,
+      step: ContentObjectStore::ContentBlock::Editions::StepsController::VALID_STEPS[:schedule_publishing],
+      ),
+      method: :put do %>
 
       <%= render "govuk_publishing_components/components/radio", {
         name: "schedule_publishing",
         id: "schedule_publishing",
         heading_size: "xl",
+        error_items: errors_for(@content_block_edition.errors, :schedule_publishing),
         items: [
           {
             value: "now",
@@ -52,33 +55,33 @@
               time_hint: "For example, 09:30 or 19:30",
               error_items: errors_for(@content_block_edition.errors, :scheduled_publication),
               year: {
-                value: year_param&.to_i,
+                value: year_param.blank? ? nil : year_param.to_i,
                 id: "scheduled_at_scheduled_publication_1i",
                 name: "scheduled_at[scheduled_publication(1i)]",
                 label: "Year",
                 width: 4,
               },
               month: {
-                value: month_param&.to_i,
+                value: month_param.blank? ? nil : month_param.to_i,
                 id: "scheduled_at_scheduled_publication_2i",
                 name: "scheduled_at[scheduled_publication(2i)]",
                 label: "Month",
                 width: 2,
               },
               day: {
-                value: day_param&.to_i,
+                value: day_param.blank? ? nil : day_param.to_i,
                 id: "content_object_store/content_block/edition_scheduled_publication",
                 name: "scheduled_at[scheduled_publication(3i)]",
                 label: "Day",
                 width: 2,
               },
               hour: {
-                value: hour_param&.to_i,
+                value: hour_param.blank? ? nil : hour_param.to_i,
                 id: "scheduled_at_scheduled_publication_4i",
                 name: "scheduled_at[scheduled_publication(4i)]",
               },
               minute: {
-                value: minute_param&.to_i,
+                value: minute_param.blank? ? nil : minute_param.to_i,
                 id: "scheduled_at_scheduled_publication_5i",
                 name: "scheduled_at[scheduled_publication(5i)]",
               },
