Showing users hint text when updating statistics announcement publication type
This will warn them to avoid confusion about why the type has been automatically changed for publications linked to the statistics announcement when they change the announcement type.

--- a/app/views/admin/statistics_announcements/_form.html.erb
+++ b/app/views/admin/statistics_announcements/_form.html.erb
@@ -5,6 +5,7 @@
     heading_size: "l",
     name: "statistics_announcement[publication_type_id]",
     id: "statistics_announcement_publication_type_id",
+    hint: statistics_announcement.new_record? ? nil : "Please note that changing the statistics type will also automatically update the type of the connected document.",
     items: [
       {
         value: 5,
